--- a/css/style.css
+++ b/css/style.css
@@ -9,130 +9,131 @@
 }
 
 body {
-    background-color: #191919;
-    color: white;
-    font-size: 1.6rem;
-}
-
-img {
-    width: 100%;
+  background-color: #191919;
+  color: white;
+  font-size: 1.6rem;
 }
 
 /* headeer */
 header {
-    max-width: 33.0rem;
-    border: 1px solid red;
-    margin: auto;
-    text-align: center;
-    
+  max-width: 33rem;
+  margin: auto;
+  text-align: center;
 }
 
 nav {
-    background-color: #191919;
-    
+  background-color: #191919;
 }
 nav ul {
-    list-style: none;
+  list-style: none;
 }
 
 nav a {
-    text-decoration: none;
-    color: #ffffff;
+  text-decoration: none;
+  color: #ffffff;
 }
 
 .icons-redes-nav img {
-    width: 1.9rem;
+  width: 1.9rem;
 }
 
 /* sessao apresentação */
 main {
-    max-width: 33.0rem;
-    margin: auto;
-    padding: 1.0rem;
-    display: flex;
-    flex-direction: column;
-    gap: 2.0rem;
+  max-width: 33rem;
+  margin: auto;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 
-
-.apresentacao img{
-    border-radius: 50%;
+.apresentacao img {
+  border-radius: 50%;
+  width: 100%;
 }
 
 .titulo-principal {
-    text-align: center;
+  text-align: center;
 }
 
 /* hardskils */
 
 .box-hardskils {
-    display: flex;
-    flex-direction: column;
-    gap: 1.4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.4rem;
 }
 .mystarks {
-    text-align: center;
+  text-align: center;
 }
 
-.icons-hardskils img{
-    width: 3.8rem;
+.icons-hardskils img {
+  width: 3.8rem;
 }
 
 /* sessao projetos */
 
 .projetos {
-    display: flex;
-    flex-direction: column;
-    gap: 1.0rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 .subtitulo-projeto {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    gap: 1.0rem;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 /* sessao cards */
-.cards {
-    display: flex;
-    flex-direction: column;
-    gap: 1.0rem;
+.card {
+  max-width: 30rem;
+  background-color: #363636;
+  border-radius: 1.6rem;
 }
 
+.card img {
+  width: 100%;
+}
+.cards {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 
 .card article {
-    text-align: center;
-    line-height: 2.5rem;
-    background-color: #363636;
-    
+  text-align: center;
+  line-height: 2.5rem;
+  background-color: #363636;
 }
 
 .links-card {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 0.5rem;
 }
 
 .links-card a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 .links-card img {
-    width: 2.0rem;
+  width: 2rem;
 }
 
-.links-card p:nth-child(2){
-    display: flex;
-    align-items: center;
-    gap: 1.0rem;
+.links-card p:nth-child(2) {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 /* footer */
 footer {
-    text-align: center;
-    padding: 1.0rem;
+  text-align: center;
+  padding: 1rem;
 }
 footer img {
-    width: 3.0rem;
+  width: 3rem;
 }
